mariadb_pod.yml
---
kind: Pod
apiVersion: v1
metadata:
    name: mariadb-pod
    namespace: pruebas
    labels:
        app: mariadb
spec:
    containers:
        -   name: mariadb-pod
            image: mariadb:latest
            ports:
              - containerPort: 3306
