services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: pruebas
  labels:
    app: mariadb
spec:
  ports:
  - name: http
    port: 3306
    targetPort: 3306
    protocol: TCP
  selector:
    app: mariadb
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
  namespace: pruebas
  labels:
    app: tomcat
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: tomcat
  type: NodePort
