route.yml
---
apiVersion: v1
kind: Route
metadata:
  name: tomcat-route
spec:
  host: tomcat-svc
  path: "/" 
  to:
    kind: Service
    name: tomcat-svc
